--- a/src/ParkingSystem.App/Views/Carros/Index.cshtml
+++ b/src/ParkingSystem.App/Views/Carros/Index.cshtml
@@ -10,55 +10,61 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Placa)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Marca)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Modelo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataCadastro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataAlterado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ativo)
-            </th>
-            <th></th>
-        </tr>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Placa)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Marca)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Modelo)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.ManobristaEntrada)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.DataHoraEntrada)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.ManobristaSaida)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.DataHoraSaida)
+			</th>
+			<th></th>
+		</tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Placa)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Marca)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modelo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataCadastro)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataAlterado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ativo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
-            </td>
-        </tr>
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Placa)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Marca)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Modelo)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.ManobristaEntrada.Nome)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.DataHoraEntrada)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.ManobristaSaida.Nome)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.DataHoraSaida)
+			</td>
+			<td>
+				<a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+				<a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+				<a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
+			</td>
+		</tr>
 }
     </tbody>
 </table>
