--- a/src/ParkingSystem.App/Views/Carros/Index.cshtml
+++ b/src/ParkingSystem.App/Views/Carros/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <p>
-    <a asp-action="Create">Novo</a>
+    <a asp-action="Create" class="btn btn-primary">Novo</a>
 </p>
 <table class="table">
     <thead>
